[MOB-768] Made several minor layout improvements. Removed rotation animation as it was misbehaving. Changed title of rewards activity toolbar

--- a/app/src/main/res/layout/activity_rewards_level.xml
+++ b/app/src/main/res/layout/activity_rewards_level.xml
@@ -6,9 +6,8 @@
     >
   <include
       android:id="@+id/app_bar"
-      layout="@layout/layout_app_bar_large_size"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+      layout="@layout/layout_app_bar"
+      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       />
