--- a/app/src/main/res/layout/current_level_card.xml
+++ b/app/src/main/res/layout/current_level_card.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
     app:cardCornerRadius="12dp"
     >
   <androidx.constraintlayout.widget.ConstraintLayout
@@ -54,11 +54,9 @@
         style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="0dp"
         android:layout_height="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="78dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="56dp"
         android:max="100"
-        android:min="0"
-        android:progress="50"
         android:progressDrawable="@drawable/generic_progress_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/spend_amount_text"
@@ -110,6 +108,7 @@
         android:layout_marginTop="12dp"
         android:fontFamily="sans-serif-medium"
         android:lineSpacingExtra="5sp"
+        android:paddingBottom="12dp"
         android:text="All truths are easy to understand once they are discovered, the point is to discover them - Galileo Galilei"
         android:textColor="#99FFFFFF"
         android:textSize="11sp"
