--- a/app/src/main/res/layout/fragment_gamification.xml
+++ b/app/src/main/res/layout/fragment_gamification.xml
@@ -40,10 +40,13 @@
     <TextView
         android:id="@+id/bonus_earned"
         style="@style/GamificationBottomPeekTextStyle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="4dp"
         android:layout_marginBottom="4dp"
+        android:gravity="center"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@id/vertical_guideline4"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,10 +85,13 @@
     <TextView
         android:id="@+id/total_spend"
         style="@style/GamificationBottomPeekTextStyle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="4dp"
         android:layout_marginBottom="4dp"
+        android:gravity="center"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/vertical_guideline4"
@@ -133,11 +139,14 @@
   </androidx.constraintlayout.widget.ConstraintLayout>
   <View
       android:layout_width="4dp"
-      android:layout_height="match_parent"
+      android:layout_height="0dp"
       android:layout_marginStart="46dp"
-      android:background="#32d4d4d4"
+      android:layout_marginBottom="16dp"
+      android:background="#33d4d4d4"
       android:orientation="vertical"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
       />
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/gamification_recycler_view"
