--- a/app/src/main/res/layout/current_level_layout.xml
+++ b/app/src/main/res/layout/current_level_layout.xml
@@ -16,8 +16,8 @@
       android:paddingHorizontal="12dp"
       android:paddingVertical="6dp"
       android:textColor="#000f1a"
-      android:textOff="See previous achievements"
-      android:textOn="Hide previous achievements"
+      android:textOff="Hide previous achievements"
+      android:textOn="See previous achievements"
       android:textSize="11sp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
@@ -26,7 +26,7 @@
       android:id="@+id/current_level_card_layout"
       layout="@layout/current_level_card"
       android:layout_width="match_parent"
-      android:layout_height="180dp"
+      android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       app:layout_constraintTop_toBottomOf="@id/toogle_button"
       />
