[MOB-768] Added images to cards

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -109,4 +109,5 @@
   <color name="gamification_blue_green">#00b2a7</color>
   <color name="gamification_light_blue">#79b9c8</color>
   <color name="gamification_blue">#00b3dd</color>
+  <color name="gamification_purple">#9d5aea</color>
 </resources>
