--- a/app/src/main/res/layout/reached_level_layout.xml
+++ b/app/src/main/res/layout/reached_level_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/wallet_card"
     android:layout_width="match_parent"
     android:layout_height="64dp"
@@ -13,7 +14,7 @@
       android:layout_width="48dp"
       android:layout_height="48dp"
       android:layout_marginStart="16dp"
-      android:src="@drawable/ic_level_galaxy_dark"
+      android:src="@drawable/gamification_planetx_reached"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintTop_toTopOf="parent"
@@ -29,12 +30,12 @@
       android:ellipsize="end"
       android:fontFamily="sans-serif-medium"
       android:maxLines="1"
-      android:text="AWESOME TITLE"
       android:textColor="#00121f"
       android:textSize="14sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@id/level_icon"
       app:layout_constraintTop_toTopOf="parent"
+      tools:text="AWESOME TITLE"
       />
   <TextView
       android:id="@+id/level_description"
@@ -47,11 +48,11 @@
       android:fontFamily="sans-serif"
       android:lineSpacingExtra="9sp"
       android:maxLines="1"
-      android:text="AWESOME DESCRIPTION"
       android:textColor="#000f19"
       android:textSize="11sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="@id/level_title"
       app:layout_constraintTop_toBottomOf="@id/level_title"
+      tools:text="AWESOME DESCRIPTION"
       />
 </androidx.constraintlayout.widget.ConstraintLayout>
