--- a/app/src/main/res/layout/unreached_level_layout.xml
+++ b/app/src/main/res/layout/unreached_level_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/wallet_card"
     android:layout_width="match_parent"
     android:layout_height="56dp"
@@ -12,7 +13,7 @@
       android:layout_width="40dp"
       android:layout_height="40dp"
       android:layout_marginStart="16dp"
-      android:src="@drawable/ic_level_locked"
+      android:src="@drawable/gamification_lock"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintTop_toTopOf="parent"
@@ -26,13 +27,13 @@
       android:layout_marginEnd="48dp"
       android:fontFamily="sans-serif"
       android:lineSpacingExtra="5sp"
-      android:text="Spend 75000 AppCoins to reach this level"
       android:textColor="#000f1a"
       android:textSize="11sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toStartOf="@id/locked_bonus"
       app:layout_constraintStart_toEndOf="@id/level_locked_icon"
       app:layout_constraintTop_toTopOf="parent"
+      tools:text="Spend 75000 AppCoins to reach this level"
       />
   <TextView
       android:id="@+id/locked_bonus"
@@ -48,11 +49,11 @@
       android:maxLines="1"
       android:paddingHorizontal="12dp"
       android:paddingVertical="5dp"
-      android:text="14% Bonus"
       android:textColor="#808080"
       android:textSize="12sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
+      tools:text="14% Bonus"
       />
 </androidx.constraintlayout.widget.ConstraintLayout>
