--- a/app/src/main/res/layout/activity_rewards_level.xml
+++ b/app/src/main/res/layout/activity_rewards_level.xml
@@ -6,8 +6,9 @@
     >
   <include
       android:id="@+id/app_bar"
-      layout="@layout/layout_app_bar"
-      app:layout_constraintEnd_toEndOf="parent"
+      layout="@layout/layout_app_bar_large_size"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       />
@@ -35,14 +36,8 @@
         layout="@layout/no_network_retry_only_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@id/no_network_bottom_guideline"
-        />
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/no_network_bottom_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.68"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         />
   </androidx.constraintlayout.widget.ConstraintLayout>
 
