--- a/app/src/main/res/layout/no_network_retry_only_layout.xml
+++ b/app/src/main/res/layout/no_network_retry_only_layout.xml
@@ -8,6 +8,8 @@
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:paddingTop="16dp"
+      android:paddingBottom="16dp"
       >
     <include
         android:id="@+id/no_network_base"
