--- a/app/src/main/res/layout/current_level_card.xml
+++ b/app/src/main/res/layout/current_level_card.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="12dp"
@@ -28,11 +29,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="sans-serif-medium"
-        android:text="You are on Mars"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@id/current_level_image"
         app:layout_constraintTop_toBottomOf="@id/current_level_image"
+        tools:text="You are on Mars"
         />
 
     <TextView
@@ -42,11 +43,11 @@
         android:layout_marginTop="4dp"
         android:fontFamily="sans-serif"
         android:lineSpacingExtra="9sp"
-        android:text="Spend this amount to reach next level"
         android:textColor="@color/white"
         android:textSize="11sp"
         app:layout_constraintStart_toStartOf="@id/current_level_title"
         app:layout_constraintTop_toBottomOf="@id/current_level_title"
+        tools:text="Spend this amount to reach next level"
         />
 
     <ProgressBar
@@ -94,12 +95,12 @@
         android:maxLines="1"
         android:paddingHorizontal="12dp"
         android:paddingVertical="5dp"
-        android:text="14% Bonus"
         android:textColor="@color/white"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        tools:text="14% Bonus"
         />
     <TextView
         android:id="@+id/current_level_phrase"
@@ -109,13 +110,13 @@
         android:fontFamily="sans-serif-medium"
         android:lineSpacingExtra="5sp"
         android:paddingBottom="12dp"
-        android:text="All truths are easy to understand once they are discovered, the point is to discover them - Galileo Galilei"
         android:textColor="#99FFFFFF"
         android:textSize="11sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="@id/percentage_left"
         app:layout_constraintStart_toStartOf="@id/current_level_progress_bar"
         app:layout_constraintTop_toBottomOf="@id/current_level_progress_bar"
+        tools:text="All truths are easy to understand once they are discovered, the point is to discover them - Galileo Galilei"
         />
   </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
