--- a/app/src/main/res/layout/current_level_layout.xml
+++ b/app/src/main/res/layout/current_level_layout.xml
@@ -6,7 +6,7 @@
     >
 
   <ToggleButton
-      android:id="@+id/toogle_button"
+      android:id="@+id/toggle_button"
       android:layout_width="wrap_content"
       android:layout_height="32dp"
       android:layout_marginStart="16dp"
@@ -28,7 +28,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
-      app:layout_constraintTop_toBottomOf="@id/toogle_button"
+      app:layout_constraintTop_toBottomOf="@id/toggle_button"
       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
