[MOB-768] Made changes requested by design

--- a/app/src/main/res/layout/fragment_gamification.xml
+++ b/app/src/main/res/layout/fragment_gamification.xml
@@ -25,16 +25,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/total_spend"
         />
-    <View
-        android:id="@+id/top_separator"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="15dp"
-        android:background="#fbfbfb"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
 
     <TextView
         android:id="@+id/bonus_earned"
@@ -42,7 +32,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="4dp"
         android:gravity="center"
@@ -58,7 +48,7 @@
         android:id="@+id/bonus_earned_skeleton"
         android:layout_width="wrap_content"
         android:layout_height="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="18dp"
         app:layout_constraintEnd_toEndOf="@id/vertical_guideline4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -72,9 +62,10 @@
         style="@style/GamificationBottomPeekTextStyle.Body"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
         android:gravity="center"
-        android:paddingStart="40dp"
-        android:paddingEnd="40dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:text="@string/gamification_how_bonus_received_body"
         app:layout_constraintEnd_toEndOf="@id/vertical_guideline4"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,9 +78,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="4dp"
-        android:layout_marginBottom="4dp"
         android:gravity="center"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -103,7 +93,7 @@
         android:id="@+id/total_spend_skeleton"
         android:layout_width="wrap_content"
         android:layout_height="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/vertical_guideline4"
         app:layout_constraintTop_toTopOf="parent"
@@ -118,10 +108,11 @@
         style="@style/GamificationBottomPeekTextStyle.Body"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
         android:gravity="center"
         android:minLines="2"
-        android:paddingStart="40dp"
-        android:paddingEnd="40dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:text="@string/gamification_how_appc_spent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/vertical_guideline4"
@@ -137,6 +128,7 @@
         />
   </androidx.constraintlayout.widget.ConstraintLayout>
   <androidx.core.widget.NestedScrollView
+      android:id="@+id/gamification_scroll_view"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       app:layout_constraintBottom_toBottomOf="parent"
@@ -161,8 +153,8 @@
           android:id="@+id/gamification_recycler_view"
           android:layout_width="match_parent"
           android:layout_height="0dp"
-          android:layout_marginStart="12dp"
-          android:layout_marginEnd="12dp"
+          android:layout_marginStart="10dp"
+          android:layout_marginEnd="10dp"
           android:clipToPadding="false"
           android:overScrollMode="never"
           android:paddingTop="16dp"
