--- a/app/src/main/res/layout/current_level_card.xml
+++ b/app/src/main/res/layout/current_level_card.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="2dp"
+    android:layout_marginEnd="2dp"
     app:cardCornerRadius="12dp"
     >
   <androidx.constraintlayout.widget.ConstraintLayout
