--- a/app/src/main/res/layout/current_level_layout.xml
+++ b/app/src/main/res/layout/current_level_layout.xml
@@ -7,6 +7,7 @@
 
   <ToggleButton
       android:id="@+id/toggle_button"
+      style="?android:attr/borderlessButtonStyle"
       android:layout_width="wrap_content"
       android:layout_height="32dp"
       android:layout_marginStart="16dp"
