--- a/app/src/main/res/layout/activity_iab.xml
+++ b/app/src/main/res/layout/activity_iab.xml
@@ -3,30 +3,46 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp"
-    android:layout_marginStart="@dimen/normal_margin"
-    android:layout_marginTop="@dimen/big_margin"
-    android:layout_marginEnd="@dimen/normal_margin"
-    android:layout_marginBottom="@dimen/normal_margin"
     >
 
-  <include
+  <FrameLayout
       android:id="@+id/layout_error"
-      layout="@layout/support_error_layout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="8dp"
+      android:layout_marginStart="@dimen/normal_margin"
+      android:layout_marginTop="@dimen/big_margin"
+      android:layout_marginEnd="@dimen/normal_margin"
+      android:layout_marginBottom="@dimen/normal_margin"
+      android:background="@drawable/background_card"
+      android:descendantFocusability="beforeDescendants"
       android:visibility="gone"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      />
+      >
+
+    <include
+        layout="@layout/support_error_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/big_margin"
+        android:layout_marginTop="@dimen/big_margin"
+        android:layout_marginEnd="@dimen/big_margin"
+        android:layout_marginBottom="@dimen/big_margin"
+        />
+  </FrameLayout>
+
 
   <FrameLayout
       android:id="@+id/fragment_container"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:layout_margin="8dp"
+      android:layout_marginStart="@dimen/normal_margin"
+      android:layout_marginTop="@dimen/big_margin"
+      android:layout_marginEnd="@dimen/normal_margin"
+      android:layout_marginBottom="@dimen/normal_margin"
       android:descendantFocusability="beforeDescendants"
       android:focusableInTouchMode="true"
       app:layout_constraintBottom_toBottomOf="parent"
