--- a/app/src/main/res/layout/legacy_gamification_card.xml
+++ b/app/src/main/res/layout/legacy_gamification_card.xml
@@ -12,7 +12,7 @@
       android:layout_height="match_parent"
       >
     <ImageView
-        android:id="@+id/gamification_image"
+        android:id="@+id/legacy_gamification_image"
         android:layout_width="match_parent"
         android:layout_height="88dp"
         android:adjustViewBounds="true"
@@ -23,16 +23,16 @@
         app:layout_constraintTop_toTopOf="parent"
         />
     <LinearLayout
-        android:id="@+id/gamification_content"
+        android:id="@+id/legacy_gamification_content"
         android:layout_width="match_parent"
         android:layout_height="124dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/gamification_image"
+        app:layout_constraintTop_toBottomOf="@id/legacy_gamification_image"
         >
       <TextView
-          android:id="@+id/gamification_title"
+          android:id="@+id/legacy_gamification_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/normal_margin"
@@ -43,7 +43,7 @@
           tools:text="@string/promotions_gamification_card_title"
           />
       <com.asfoundation.wallet.promotions.GamificationProgressBarView
-          android:id="@+id/gamification_progress_bar"
+          android:id="@+id/legacy_gamification_progress_bar"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
@@ -60,7 +60,7 @@
         android:background="@color/layout_separator_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/gamification_content"
+        app:layout_constraintTop_toBottomOf="@id/legacy_gamification_content"
         />
     <Button
         android:id="@+id/see_more_button"
