[MOB-768] Replaced hardcoded strings

--- a/app/src/main/res/layout/current_level_layout.xml
+++ b/app/src/main/res/layout/current_level_layout.xml
@@ -17,8 +17,8 @@
       android:paddingHorizontal="12dp"
       android:paddingVertical="6dp"
       android:textColor="#000f1a"
-      android:textOff="See previous achievements"
-      android:textOn="Hide previous achievements"
+      android:textOff="@string/gamif_show_previous"
+      android:textOn="@string/gamif_hide_previous"
       android:textSize="11sp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
