--- a/app/src/main/res/layout/fragment_gamification.xml
+++ b/app/src/main/res/layout/fragment_gamification.xml
@@ -65,7 +65,7 @@
         android:gravity="center"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
-        android:text="@string/gamification_how_bonus_received_body"
+        android:text="@string/gamif_bonus_received"
         app:layout_constraintEnd_toEndOf="@id/vertical_guideline4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bonus_earned"
@@ -112,7 +112,7 @@
         android:minLines="2"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
-        android:text="@string/gamification_how_appc_spent"
+        android:text="@string/gamif_spent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/vertical_guideline4"
         app:layout_constraintTop_toBottomOf="@id/total_spend"
