[MOB-769] Refactored TopUp

--- a/app/src/main/res/layout/top_up_activity_layout.xml
+++ b/app/src/main/res/layout/top_up_activity_layout.xml
@@ -12,7 +12,7 @@
       />
 
   <include
-      android:id="@+id/fragment_error"
+      android:id="@+id/layout_error"
       layout="@layout/layout_adyen_error_top_up"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
