--- a/app/src/main/res/layout/gamification_card.xml
+++ b/app/src/main/res/layout/gamification_card.xml
@@ -68,8 +68,10 @@
           android:id="@+id/planet_title"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
+          android:layout_marginStart="8dp"
           android:layout_marginTop="6dp"
           android:layout_marginEnd="16dp"
+          android:fontFamily="sans-serif-medium"
           android:textColor="@color/white"
           android:textSize="16sp"
           app:layout_constraintEnd_toEndOf="parent"
