--- a/app/src/main/res/layout/activity_rewards_level.xml
+++ b/app/src/main/res/layout/activity_rewards_level.xml
@@ -22,7 +22,7 @@
       app:layout_constraintTop_toTopOf="parent"
       />
 
-  <androidx.constraintlayout.widget.ConstraintLayout
+  <FrameLayout
       android:id="@+id/gamification_no_network"
       android:layout_width="match_parent"
       android:layout_height="0dp"
@@ -36,9 +36,7 @@
         layout="@layout/no_network_retry_only_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         />
-  </androidx.constraintlayout.widget.ConstraintLayout>
+  </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
