--- a/app/src/main/res/layout-land/fragment_top_up.xml
+++ b/app/src/main/res/layout-land/fragment_top_up.xml
@@ -193,9 +193,9 @@
           android:layout_height="0dp"
           android:layout_marginStart="56dp"
           android:layout_marginEnd="56dp"
-          app:layout_constraintStart_toStartOf="@id/bonus_msg"
-          app:layout_constraintEnd_toEndOf="@id/mid_guideline"
           app:layout_constraintBottom_toBottomOf="@id/bonus_msg"
+          app:layout_constraintEnd_toEndOf="@id/mid_guideline"
+          app:layout_constraintStart_toStartOf="@id/bonus_msg"
           app:layout_constraintTop_toTopOf="@id/bonus_msg"
           />
 
@@ -244,6 +244,32 @@
               app:layout_constraintTop_toTopOf="parent"
               />
 
+          <LinearLayout
+              android:id="@+id/payments_skeleton"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginStart="10dp"
+              android:layout_marginTop="16dp"
+              android:layout_marginEnd="10dp"
+              android:layout_marginBottom="16dp"
+              android:orientation="vertical"
+              app:layout_constraintBottom_toBottomOf="parent"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toTopOf="parent"
+              >
+            <include
+                layout="@layout/payments_skeleton"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                />
+            <include
+                layout="@layout/payments_skeleton"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="8dp"
+                />
+          </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
       </RelativeLayout>
@@ -261,18 +287,6 @@
           app:layout_constraintTop_toBottomOf="@id/container"
           />
 
-      <ProgressBar
-          android:id="@+id/button_loading"
-          android:layout_width="@dimen/button_height"
-          android:layout_height="@dimen/button_height"
-          android:indeterminateDrawable="@drawable/gradient_progress"
-          android:visibility="gone"
-          app:layout_constraintBottom_toBottomOf="@+id/button"
-          app:layout_constraintEnd_toEndOf="@+id/button"
-          app:layout_constraintStart_toStartOf="@+id/button"
-          app:layout_constraintTop_toTopOf="@+id/button"
-          />
-
       <Button
           android:id="@+id/button"
           style="@style/ButtonStyle.Alternative"
@@ -285,7 +299,6 @@
           android:enabled="false"
           android:minWidth="144dp"
           android:text="@string/action_next"
-          android:visibility="invisible"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/container"
