--- a/app/src/main/res/layout/payments_skeleton.xml
+++ b/app/src/main/res/layout/payments_skeleton.xml
@@ -2,12 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     >
   <com.facebook.shimmer.ShimmerFrameLayout
       android:id="@+id/main_background"
       android:layout_width="match_parent"
-      android:layout_height="40dp"
+      android:layout_height="match_parent"
       app:layout_constraintTop_toTopOf="parent"
       app:shimmer_base_alpha="1"
       app:shimmer_base_color="#f0f0f0"
