--- a/app/src/main/res/layout/fragment_gamification.xml
+++ b/app/src/main/res/layout/fragment_gamification.xml
@@ -9,7 +9,7 @@
       android:id="@+id/gamification_header"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:background="@color/white"
+      android:background="@drawable/background_white_card_top"
       android:elevation="2dp"
       android:paddingBottom="10dp"
       app:layout_constraintTop_toTopOf="parent"
@@ -154,8 +154,10 @@
           android:layout_marginStart="10dp"
           android:layout_marginEnd="10dp"
           android:clipToPadding="false"
+          android:orientation="vertical"
           android:overScrollMode="never"
           android:paddingTop="16dp"
+          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
