--- a/app/src/main/res/layout-land/merged_appcoins_layout.xml
+++ b/app/src/main/res/layout-land/merged_appcoins_layout.xml
@@ -31,8 +31,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="2dp"
-        android:visibility="invisible"
-        tools:visibility="visible"
         >
 
       <androidx.constraintlayout.widget.Guideline
@@ -113,11 +111,10 @@
           app:layout_constraintStart_toEndOf="@id/mid_guideline"
           app:layout_constraintTop_toBottomOf="@id/top_separator"
           />
-      <LinearLayout
+      <androidx.constraintlayout.widget.ConstraintLayout
           android:id="@+id/radio_group"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
-          android:orientation="vertical"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toEndOf="@id/mid_guideline"
           app:layout_constraintTop_toBottomOf="@id/top_separator"
@@ -130,15 +127,34 @@
             android:layout_height="102dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+        <include
+            android:id="@+id/skeleton_appcoins"
+            layout="@layout/skeleton_credits"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="9dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@id/radio_middle_separator"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             />
         <View
             android:id="@+id/radio_middle_separator"
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="16dp"
             android:background="@color/layout_separator_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/payment_methods_radio_list"
+            app:layout_constraintTop_toBottomOf="@id/appcoins_radio"
             />
         <include
             android:id="@+id/credits_radio"
@@ -147,8 +163,31 @@
             android:layout_height="108dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="24dp"
+            app:layout_constraintTop_toBottomOf="@id/radio_middle_separator"
             />
-      </LinearLayout>
+        <include
+            android:id="@+id/skeleton_credits"
+            layout="@layout/skeleton_credits"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="9dp"
+            android:layout_marginBottom="17dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/radio_middle_separator"
+            />
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/payment_methods_group"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:constraint_referenced_ids="appcoins_radio,credits_radio"
+            tools:visibility="visible"
+            />
+      </androidx.constraintlayout.widget.ConstraintLayout>
       <View
           android:id="@+id/bottom_separator"
           android:layout_width="match_parent"
