--- a/app/src/main/res/layout-land/payment_methods_layout.xml
+++ b/app/src/main/res/layout-land/payment_methods_layout.xml
@@ -138,7 +138,7 @@
 
       <include
           android:id="@+id/bonus_layout_skeleton"
-          layout="@layout/rounded_rectangle_skeleton"
+          layout="@layout/skeleton_rounded_rectangle"
           android:layout_width="0dp"
           android:layout_height="0dp"
           app:layout_constraintBottom_toBottomOf="@id/bonus_layout"
@@ -148,7 +148,7 @@
           />
       <include
           android:id="@+id/bonus_msg_skeleton"
-          layout="@layout/rounded_rectangle_skeleton"
+          layout="@layout/skeleton_rounded_rectangle"
           android:layout_width="0dp"
           android:layout_height="0dp"
           app:layout_constraintBottom_toBottomOf="@id/bonus_msg"
@@ -205,23 +205,27 @@
           app:layout_constraintStart_toStartOf="@id/mid_guideline"
           app:layout_constraintTop_toBottomOf="@id/top_separator"
           >
-        <include layout="@layout/payments_skeleton" />
         <include
-            layout="@layout/payments_skeleton"
+            layout="@layout/skeleton_payments"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
+            />
+        <include
+            layout="@layout/skeleton_payments"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginTop="2dp"
             />
         <include
-            layout="@layout/payments_skeleton"
+            layout="@layout/skeleton_payments"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginTop="2dp"
             />
         <include
-            layout="@layout/payments_skeleton"
+            layout="@layout/skeleton_payments"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginTop="2dp"
             />
       </LinearLayout>
@@ -229,7 +233,7 @@
           android:id="@+id/layout_pre_selected"
           layout="@layout/selected_payment_method"
           android:layout_width="0dp"
-          android:layout_height="wrap_content"
+          android:layout_height="40dp"
           android:layout_marginStart="16dp"
           android:layout_marginTop="16dp"
           android:layout_marginEnd="16dp"
