--- a/app/src/main/res/layout-land/merged_appcoins_layout.xml
+++ b/app/src/main/res/layout-land/merged_appcoins_layout.xml
@@ -209,11 +209,9 @@
       <include
           android:id="@+id/dialog_buy_buttons_payment_methods"
           layout="@layout/dialog_buy_buttons_payment_methods"
-          android:layout_width="0dp"
+          android:layout_width="match_parent"
           android:layout_height="48dp"
           app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toEndOf="@id/bottom_mid_guideline"
           app:layout_constraintTop_toBottomOf="@id/bottom_separator"
 
           />
