--- a/app/src/main/res/layout-land/payment_methods_layout.xml
+++ b/app/src/main/res/layout-land/payment_methods_layout.xml
@@ -16,6 +16,14 @@
       android:layout_gravity="center"
       android:background="@drawable/background_card"
       >
+    <ProgressBar
+        android:id="@+id/loading_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:indeterminateDrawable="@drawable/gradient_progress"
+        android:visibility="visible"
+        />
 
     <LinearLayout
         android:id="@+id/processing_loading"
@@ -232,7 +240,7 @@
           android:id="@+id/layout_pre_selected"
           layout="@layout/selected_payment_method"
           android:layout_width="0dp"
-          android:layout_height="40dp"
+          android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginTop="16dp"
           android:layout_marginEnd="16dp"
@@ -292,8 +300,8 @@
           android:id="@+id/payment_methods_list_group"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          app:constraint_referenced_ids="payment_methods_radio_list,mid_separator"
-          tools:visibility="gone"
+          android:visibility="invisible"
+          app:constraint_referenced_ids="payment_methods_radio_list"
           />
 
       <androidx.constraintlayout.widget.Group
