--- a/app/src/main/res/drawable/skeleton_circle.xml
+++ b/app/src/main/res/drawable/skeleton_circle.xml
@@ -3,5 +3,5 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:shape="oval">
-  <solid android:color="#d0d0d0" />
+  <solid android:color="@color/skeleton_dark_base_color" />
 </shape>
