--- a/app/src/main/res/drawable/skeleton_row.xml
+++ b/app/src/main/res/drawable/skeleton_row.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
-  <solid android:color="#f0f0f0" />
+  <solid android:color="@color/skeleton_light_base_color" />
   <corners android:radius="4dp" />
 </shape>
