--- a/app/src/main/res/layout-land/skeleton_credits.xml
+++ b/app/src/main/res/layout-land/skeleton_credits.xml
@@ -10,10 +10,10 @@
       android:layout_height="match_parent"
       app:layout_constraintTop_toTopOf="parent"
       app:shimmer_base_alpha="1"
-      app:shimmer_base_color="#f0f0f0"
+      app:shimmer_base_color="@color/skeleton_light_base_color"
       app:shimmer_colored="true"
       app:shimmer_duration="1000"
-      app:shimmer_highlight_color="#d2d2d2"
+      app:shimmer_highlight_color="@color/skeleton_higlight_color"
       >
 
     <View
@@ -33,7 +33,7 @@
       app:layout_constraintStart_toStartOf="@id/main_background"
       app:layout_constraintTop_toTopOf="@id/main_background"
       app:shimmer_base_alpha="1"
-      app:shimmer_base_color="#d8d8d8"
+      app:shimmer_base_color="@color/skeleton_dark_base_color"
       app:shimmer_colored="true"
       app:shimmer_duration="1000"
       app:shimmer_highlight_color="#d2d2d2"
@@ -55,10 +55,10 @@
       app:layout_constraintStart_toEndOf="@id/skeleton_circle"
       app:layout_constraintTop_toTopOf="@id/skeleton_circle"
       app:shimmer_base_alpha="1"
-      app:shimmer_base_color="#d8d8d8"
+      app:shimmer_base_color="@color/skeleton_dark_base_color"
       app:shimmer_colored="true"
       app:shimmer_duration="1000"
-      app:shimmer_highlight_color="#d2d2d2"
+      app:shimmer_highlight_color="@color/skeleton_higlight_color"
       >
     <View
         android:layout_width="match_parent"
@@ -78,10 +78,10 @@
       app:layout_constraintStart_toEndOf="@id/skeleton_square"
       app:layout_constraintTop_toTopOf="parent"
       app:shimmer_base_alpha="1"
-      app:shimmer_base_color="#d8d8d8"
+      app:shimmer_base_color="@color/skeleton_dark_base_color"
       app:shimmer_colored="true"
       app:shimmer_duration="1000"
-      app:shimmer_highlight_color="#d2d2d2"
+      app:shimmer_highlight_color="@color/skeleton_higlight_color"
       >
     <View
         android:layout_width="match_parent"
@@ -100,10 +100,10 @@
       app:layout_constraintStart_toStartOf="@id/skeleton_row_1"
       app:layout_constraintTop_toBottomOf="@id/skeleton_row_1"
       app:shimmer_base_alpha="1"
-      app:shimmer_base_color="#d8d8d8"
+      app:shimmer_base_color="@color/skeleton_dark_base_color"
       app:shimmer_colored="true"
       app:shimmer_duration="1000"
-      app:shimmer_highlight_color="#d2d2d2"
+      app:shimmer_highlight_color="@color/skeleton_higlight_color"
       >
     <View
         android:layout_width="match_parent"
@@ -121,10 +121,10 @@
       app:layout_constraintStart_toStartOf="@id/skeleton_row_2"
       app:layout_constraintTop_toBottomOf="@id/skeleton_row_2"
       app:shimmer_base_alpha="1"
-      app:shimmer_base_color="#d8d8d8"
+      app:shimmer_base_color="@color/skeleton_dark_base_color"
       app:shimmer_colored="true"
       app:shimmer_duration="1000"
-      app:shimmer_highlight_color="#d2d2d2"
+      app:shimmer_highlight_color="@color/skeleton_higlight_color"
       >
     <View
         android:layout_width="match_parent"
