--- a/app/src/main/res/layout/skeleton_rounded_rectangle.xml
+++ b/app/src/main/res/layout/skeleton_rounded_rectangle.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:shimmer_base_alpha="1"
-    app:shimmer_base_color="#f0f0f0"
+    app:shimmer_base_color="@color/skeleton_light_base_color"
     app:shimmer_colored="true"
     app:shimmer_duration="1000"
-    app:shimmer_highlight_color="#d2d2d2"
+    app:shimmer_highlight_color="@color/skeleton_higlight_color"
     >
   <View
       android:layout_width="match_parent"
