[MOB-746] Added disable reasons

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -96,6 +96,7 @@
 
   <color name="edit_text_border">@color/appc_pink</color>
   <color name="edit_text_label">@color/appc_pink</color>
+  <color name="disable_reason">#fe6e76</color>
 
   <!-- Skeletons -->
 
