[MOB-385] Made necessary changes so that payment method recycler view doesn't wrap it's content if it has to many payment methods

--- a/app/src/main/res/layout-land/fragment_top_up.xml
+++ b/app/src/main/res/layout-land/fragment_top_up.xml
@@ -220,7 +220,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="8dp"
             android:paddingStart="25dp"
             android:paddingEnd="25dp"
             >
@@ -229,9 +228,12 @@
               android:id="@+id/payment_methods"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              android:clipToPadding="false"
               android:focusable="true"
               android:overScrollMode="never"
-              android:visibility="visible"
+              android:paddingTop="4dp"
+              android:paddingBottom="4dp"
+              app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
