--- a/app/src/main/res/layout/fragment_top_up.xml
+++ b/app/src/main/res/layout/fragment_top_up.xml
@@ -141,7 +141,6 @@
           android:id="@+id/payment_container"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginTop="18dp"
           android:paddingStart="25dp"
           android:paddingEnd="25dp"
           app:layout_constraintTop_toBottomOf="@id/top_separator_topup"
@@ -151,14 +150,16 @@
             android:id="@+id/payment_methods"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:clipToPadding="false"
             android:focusable="true"
             android:overScrollMode="never"
-            android:visibility="visible"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
-
         <LinearLayout
             android:id="@+id/payments_skeleton"
             android:layout_width="match_parent"
@@ -192,7 +193,6 @@
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:layout_marginStart="32dp"
-          android:layout_marginTop="15dp"
           android:layout_marginEnd="32dp"
           android:background="#eaeaea"
           app:layout_constraintEnd_toEndOf="parent"
@@ -206,7 +206,7 @@
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/big_margin"
-          android:layout_marginTop="16dp"
+          android:layout_marginTop="36dp"
           android:layout_marginEnd="@dimen/big_margin"
           android:visibility="invisible"
           app:layout_constraintBottom_toTopOf="@+id/bonus_msg"
