[MOB-168] Replaced hardcoded strings

--- a/app/src/main/res/layout/fragment_subscription_details.xml
+++ b/app/src/main/res/layout/fragment_subscription_details.xml
@@ -47,7 +47,7 @@
       android:fillViewport="true"
       android:overScrollMode="never"
       android:scrollbars="none"
-      app:layout_constraintBottom_toTopOf="@id/bottom_buttons"
+      app:layout_constraintBottom_toTopOf="@id/cancel_subscription"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.0"
       >
@@ -205,7 +205,7 @@
           android:layout_height="wrap_content"
           android:layout_marginStart="8dp"
           android:layout_marginEnd="@dimen/big_margin"
-          android:text="APPC value can be volatile, the value shown may not match  the next  payment"
+          android:text="@string/subscriptions_details_disclaimer"
           android:textSize="10sp"
           app:layout_constraintBottom_toBottomOf="@id/info"
           app:layout_constraintEnd_toEndOf="parent"
@@ -230,7 +230,7 @@
       android:minWidth="64dp"
       android:minHeight="36dp"
       android:orientation="vertical"
-      android:text="Cancel Subscription"
+      android:text="@string/subscriptions_cancel_button"
       android:visibility="gone"
       app:layout_constraintBottom_toBottomOf="parent"
       tools:visibility="visible"
