--- a/app/src/main/res/layout/layout_no_subscriptions.xml
+++ b/app/src/main/res/layout/layout_no_subscriptions.xml
@@ -28,7 +28,7 @@
       android:fontFamily="sans-serif"
       android:gravity="center"
       android:lineSpacingExtra="4sp"
-      android:text="No Subscriptions Yet :("
+      android:text="@string/subscriptions_empty_title"
       android:textColor="@color/transaction_item_text_color"
       android:textSize="16sp"
       app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +46,7 @@
       android:fontFamily="sans-serif"
       android:gravity="center"
       android:lineSpacingExtra="4sp"
-      android:text="Sign in for subscriptions in your favorite games, we deal with the periodic payments"
+      android:text="@string/subscriptions_empty_body"
       android:textColor="@color/grey_8a_alpha"
       android:textSize="12sp"
       app:layout_constraintEnd_toEndOf="parent"
