--- a/app/src/main/res/layout/fragment_subscription_cancel.xml
+++ b/app/src/main/res/layout/fragment_subscription_cancel.xml
@@ -32,7 +32,7 @@
       android:layout_marginStart="32dp"
       android:layout_marginTop="25dp"
       android:layout_marginEnd="32dp"
-      android:text="Cancel Subscription"
+      android:text="@string/subscriptions_cancel_title"
       android:textColor="@color/black_87_alpha"
       android:textSize="20sp"
       app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +50,7 @@
       android:layout_marginStart="32dp"
       android:layout_marginTop="7dp"
       android:layout_marginEnd="32dp"
-      android:text="Are you sure you want to cancel the following subscription?"
+      android:text="@string/subscriptions_cancel_body"
       android:textColor="@color/black_87_alpha"
       android:textSize="14sp"
       app:layout_constraintEnd_toEndOf="parent"
@@ -102,7 +102,7 @@
       android:focusable="true"
       android:minWidth="64dp"
       android:minHeight="36dp"
-      android:text="No, go back"
+      android:text="@string/subscriptions_cancel_no_button"
       app:layout_constraintBottom_toTopOf="@id/cancel_subscription"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
@@ -119,7 +119,7 @@
       android:layout_marginBottom="24dp"
       android:maxWidth="126dp"
       android:minWidth="80dp"
-      android:text="Yes, cancel subscription"
+      android:text="@string/subscriptions_cancel_yes_button"
       android:textSize="14sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
