--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,6 +26,14 @@
     <item name="colorPrimary">@color/btn_end_gradient_color</item>
   </style>
 
+  <style name="ThreeDS2Theme" parent="AppTheme">
+    <!-- Customize the SDK theme here. -->
+    <item name="colorPrimary">@color/adyen_3DS_color</item>
+    <item name="colorPrimaryDark">@color/adyen_3DS_color</item>
+    <item name="colorAccent">@color/adyen_3DS_color</item>
+
+  </style>
+
   <style name="AppTheme.NoActionBar" parent="AppTheme">
     <item name="windowActionBar">false</item>
     <item name="windowNoTitle">true</item>
