--- a/app/src/main/res/layout/topup_pending_user_payment_view.xml
+++ b/app/src/main/res/layout/topup_pending_user_payment_view.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
     android:background="@drawable/background_card"
     android:clipChildren="false"
@@ -31,6 +31,7 @@
       android:layout_height="wrap_content"
       android:layout_marginStart="48dp"
       android:layout_marginEnd="48dp"
+      android:layout_marginBottom="16dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/next_steps_title"
@@ -66,10 +67,12 @@
       android:textColor="@color/pending_payment_text_color"
       android:textSize="12sp"
       android:visibility="invisible"
+      app:layout_constraintBottom_toTopOf="@id/step_two_desc"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0"
       app:layout_constraintStart_toEndOf="@id/step_one"
       app:layout_constraintTop_toBottomOf="@id/top_up_in_progress_animation"
+      app:layout_constraintVertical_chainStyle="packed"
       tools:text="@string/async_steps_1_no_notification"
       tools:visibility="visible"
       />
@@ -104,8 +107,8 @@
       android:textColor="@color/pending_payment_text_color"
       android:textSize="12sp"
       android:visibility="invisible"
+      app:layout_constraintBottom_toTopOf="@id/got_it_button"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0"
       app:layout_constraintStart_toEndOf="@id/step_two"
       app:layout_constraintTop_toBottomOf="@id/step_one_desc"
       tools:visibility="visible"
@@ -117,9 +120,9 @@
       android:layout_width="wrap_content"
       android:layout_height="@dimen/button_height"
       android:layout_gravity="center_vertical"
-      android:layout_marginTop="40dp"
+      android:layout_marginTop="16dp"
       android:layout_marginEnd="16dp"
-      android:layout_marginBottom="8dp"
+      android:layout_marginBottom="16dp"
       android:alpha="0.2"
       android:maxWidth="126dp"
       android:minWidth="80dp"
@@ -128,7 +131,9 @@
       android:textSize="14sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/step_two_desc"
+      app:layout_constraintHorizontal_bias="1"
+      app:layout_constraintVertical_bias="1"
+      app:layout_constraintStart_toStartOf="parent"
       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
