--- a/app/src/main/res/layout-land/topup_pending_user_payment_view.xml
+++ b/app/src/main/res/layout-land/topup_pending_user_payment_view.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
     android:background="@drawable/background_card"
     android:clipChildren="false"
@@ -33,6 +33,7 @@
       app:layout_constraintTop_toBottomOf="@+id/next_steps_title"
       app:lottie_enableMergePathsForKitKatAndAbove="true"
       app:lottie_rawRes="@raw/async_topup_progress"
+      android:layout_marginBottom="16dp"
       />
 
   <TextView
@@ -63,10 +64,12 @@
       android:textColor="@color/pending_payment_text_color"
       android:textSize="12sp"
       android:visibility="invisible"
+      app:layout_constraintBottom_toTopOf="@id/step_two_desc"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0"
       app:layout_constraintStart_toEndOf="@id/step_one"
       app:layout_constraintTop_toBottomOf="@id/top_up_in_progress_animation"
+      app:layout_constraintVertical_chainStyle="packed"
       tools:text="@string/async_steps_1_no_notification"
       tools:visibility="visible"
       />
@@ -101,6 +104,7 @@
       android:textColor="@color/pending_payment_text_color"
       android:textSize="12sp"
       android:visibility="invisible"
+      app:layout_constraintBottom_toTopOf="@id/got_it_button"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toEndOf="@id/step_two"
@@ -116,7 +120,7 @@
       android:layout_gravity="center_vertical"
       android:layout_marginTop="16dp"
       android:layout_marginEnd="16dp"
-      android:layout_marginBottom="8dp"
+      android:layout_marginBottom="16dp"
       android:alpha="0.2"
       android:maxWidth="126dp"
       android:minWidth="80dp"
@@ -125,7 +129,8 @@
       android:textSize="14sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/step_two_desc"
+      app:layout_constraintHorizontal_bias="1"
+      app:layout_constraintStart_toStartOf="parent"
       />
 
   <androidx.constraintlayout.widget.Guideline
